# weather_app_cli

./: Cargo.toml  README.md
src/: main.rs  parse.rs  temp.rs  types.rs  utils.rs
