[package]
name = "weather_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
minreq = { version = "2.5.1", features = ["json-using-serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
weather_api = { git = "https://github.com/MichalUSER/weather_app_api.git", rev = "dfa5cd92caebbb4968801f942641a2fc01fd010e" }